crates/iql-parser/src/snapshots/issuecraft_ql__parser__tests__parse_assign.snap
---
source: crates/iql-parser/src/parser.rs
expression: "&result"
---
Assign(
    AssignStatement {
        issue_id: IssueId(
            "backend#456",
        ),
        assignee: "alice",
    },
)
