crates/iql-parser/src/snapshots/issuecraft_ql__parser__tests__parse_comment.snap
---
source: crates/iql-parser/src/parser.rs
expression: "&result"
---
Comment(
    CommentStatement {
        issue_id: IssueId(
            "backend#101",
        ),
        content: "Great work!",
    },
)
