crates/iql-parser/src/snapshots/issuecraft_ql__parser__tests__parse_create_issue.snap
---
source: crates/iql-parser/src/parser.rs
expression: "&result"
---
Create(
    Issue {
        project: ProjectId(
            "my-project",
        ),
        title: "New feature",
        kind: Bug,
        description: None,
        priority: Some(
            High,
        ),
        assignee: None,
    },
)
