crates/iql-parser/src/snapshots/issuecraft_ql__parser__tests__parse_create_user_simple.snap
---
source: crates/iql-parser/src/parser.rs
expression: "&result"
---
Create(
    User {
        username: "alice",
        email: None,
        name: None,
    },
)
