crates/iql-parser/src/snapshots/issuecraft_ql__parser__tests__parse_create_user_with_details.snap
---
source: crates/iql-parser/src/parser.rs
expression: "&result"
---
Create(
    User {
        username: "bob",
        email: Some(
            "bob@test.com",
        ),
        name: Some(
            "Bob Smith",
        ),
    },
)
