crates/iql-parser/src/snapshots/issuecraft_ql__parser__tests__parse_issue_id_project.snap
---
source: crates/iql-parser/src/parser.rs
expression: "&result"
---
Close(
    CloseStatement {
        issue_id: IssueId(
            "backend#42",
        ),
        reason: None,
    },
)
