crates/iql-parser/src/snapshots/issuecraft_ql__parser__tests__parse_select_columns.snap
---
source: crates/iql-parser/src/parser.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: Named(
            [
                "title",
                "status",
            ],
        ),
        from: Issues,
        filter: None,
        order_by: None,
        limit: None,
        offset: None,
    },
)
