crates/iql-parser/src/snapshots/issuecraft_ql__parser__tests__parse_select_complex_filter.snap
---
source: crates/iql-parser/src/parser.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Issues,
        filter: Some(
            And(
                Comparison {
                    field: "status",
                    op: Equal,
                    value: String(
                        "open",
                    ),
                },
                Comparison {
                    field: "priority",
                    op: Equal,
                    value: Priority(
                        High,
                    ),
                },
            ),
        ),
        order_by: None,
        limit: None,
        offset: None,
    },
)
