crates/iql-parser/src/snapshots/issuecraft_ql__parser__tests__parse_update_issue.snap
---
source: crates/iql-parser/src/parser.rs
expression: "&result"
---
Update(
    UpdateStatement {
        entity: Issue(
            IssueId(
                "backend#123",
            ),
        ),
        updates: [
            FieldUpdate {
                field: "status",
                value: String(
                    "closed",
                ),
            },
        ],
    },
)
